@@ -772,9 +772,10 @@ synthv1widget::synthv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 		SIGNAL(triggered(bool)),
 		SLOT(helpAboutQt()));
 
-
 	// Epilog.
 	// QWidget::adjustSize();
+
+	m_ui.StatusBar->showMessage(tr("Ready"), 5000);
 }
 
 
@@ -821,8 +822,17 @@ void synthv1widget::paramChanged ( float fValue )
 		return;
 
 	synthv1widget_knob *pKnob = qobject_cast<synthv1widget_knob *> (sender());
-	if (pKnob)
+	if (pKnob) {
 		updateParam(m_knobParams.value(pKnob), fValue);
+		QGroupBox *pGroupBox = qobject_cast<QGroupBox *> (pKnob->parentWidget());
+		if (pGroupBox) {
+			m_ui.StatusBar->showMessage(QString("%1 - %2 %3: %4")
+				.arg(m_ui.StackedWidget->currentWidget()->windowTitle())
+				.arg(pGroupBox->title())
+				.arg(pKnob->text())
+				.arg(pKnob->valueText()), 5000);
+		}
+	}
 
 	m_ui.Preset->dirtyPreset();
 }
@@ -843,6 +853,8 @@ void synthv1widget::resetParams (void)
 		updateParam(index, fValue);
 		m_params_ab[index] = fValue;
 	}
+
+	m_ui.StatusBar->showMessage(tr("Reset"), 5000);
 }
 
 
@@ -870,6 +882,8 @@ void synthv1widget::swapParams ( bool bOn )
 	}
 
 	m_ui.Preset->dirtyPreset();
+
+	m_ui.StatusBar->showMessage(tr("Swap %1").arg(bOn ? 'B' : 'A'), 5000);
 }
 
 
@@ -931,6 +945,8 @@ void synthv1widget::newPreset (void)
 
 	resetParamKnobs();
 	resetParamValues();
+
+	m_ui.StatusBar->showMessage(tr("New preset"), 5000);
 }
 
 
@@ -995,7 +1011,9 @@ void synthv1widget::loadPreset ( const QString& sFilename )
 
 	file.close();
 
-	m_ui.Preset->setPreset(fi.completeBaseName());
+	const QString& sPreset = fi.completeBaseName();
+	m_ui.Preset->setPreset(sPreset);
+	m_ui.StatusBar->showMessage(tr("Load preset: %1").arg(sPreset), 5000);
 
 	QDir::setCurrent(currentDir.absolutePath());
 }
@@ -1006,9 +1024,11 @@ void synthv1widget::savePreset ( const QString& sFilename )
 #ifdef CONFIG_DEBUG
 	qDebug("synthv1widget::savePreset(\"%s\")", sFilename.toUtf8().constData());
 #endif
+	const QString& sPreset = QFileInfo(sFilename).completeBaseName();
+
 	QDomDocument doc(SYNTHV1_TITLE);
 	QDomElement ePreset = doc.createElement("preset");
-	ePreset.setAttribute("name", QFileInfo(sFilename).completeBaseName());
+	ePreset.setAttribute("name", sPreset);
 	ePreset.setAttribute("version", SYNTHV1_VERSION);
 
 	QDomElement eParams = doc.createElement("params");
@@ -1028,6 +1048,8 @@ void synthv1widget::savePreset ( const QString& sFilename )
 		QTextStream(&file) << doc.toString();
 		file.close();
 	}
+
+	m_ui.StatusBar->showMessage(tr("Save preset: %1").arg(sPreset), 5000);
 }
 
 
